lib/rust/marty_bridge.dart/frb_generated.io.dart


  late final _cst_new_box_autoadd_verifiable_credentialPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_verifiable_credential> Function()
        >
      >(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_verifiable_credential',
      );
  late final _cst_new_box_autoadd_verifiable_credential =
      _cst_new_box_autoadd_verifiable_credentialPtr
          .asFunction<ffi.Pointer<wire_cst_verifiable_credential> Function()>();

  ffi.Pointer<wire_cst_list_String> cst_new_list_String(int len) {
    return _cst_new_list_String(len);
  }

  late final _cst_new_list_StringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_String> Function(ffi.Int32)
        >
      >('frbgen_privacyidea_authenticator_cst_new_list_String');
  late final _cst_new_list_String = _cst_new_list_StringPtr
      .asFunction<ffi.Pointer<wire_cst_list_String> Function(int)>();

  ffi.Pointer<wire_cst_list_credential> cst_new_list_credential(int len) {
    return _cst_new_list_credential(len);
  }

  late final _cst_new_list_credentialPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_credential> Function(ffi.Int32)
        >
      >('frbgen_privacyidea_authenticator_cst_new_list_credential');
  late final _cst_new_list_credential = _cst_new_list_credentialPtr
      .asFunction<ffi.Pointer<wire_cst_list_credential> Function(int)>();

  ffi.Pointer<wire_cst_list_credential_group> cst_new_list_credential_group(
    int len,
  ) {
    return _cst_new_list_credential_group(len);
  }

  late final _cst_new_list_credential_groupPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_credential_group> Function(ffi.Int32)
        >
      >('frbgen_privacyidea_authenticator_cst_new_list_credential_group');
  late final _cst_new_list_credential_group = _cst_new_list_credential_groupPtr
      .asFunction<ffi.Pointer<wire_cst_list_credential_group> Function(int)>();

  ffi.Pointer<wire_cst_list_list_prim_u_8_strict>
  cst_new_list_list_prim_u_8_strict(int len) {
    return _cst_new_list_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_list_prim_u_8_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_list_prim_u_8_strict> Function(ffi.Int32)
        >
      >('frbgen_privacyidea_authenticator_cst_new_list_list_prim_u_8_strict');
  late final _cst_new_list_list_prim_u_8_strict =
      _cst_new_list_list_prim_u_8_strictPtr
          .asFunction<
            ffi.Pointer<wire_cst_list_list_prim_u_8_strict> Function(int)
          >();

  ffi.Pointer<wire_cst_list_prim_u_8_loose> cst_new_list_prim_u_8_loose(
    int len,
  ) {
    return _cst_new_list_prim_u_8_loose(len);
  }

  late final _cst_new_list_prim_u_8_loosePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_loose> Function(ffi.Int32)
        >
      >('frbgen_privacyidea_authenticator_cst_new_list_prim_u_8_loose');
  late final _cst_new_list_prim_u_8_loose = _cst_new_list_prim_u_8_loosePtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_loose> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(len);
  }

  late final _cst_new_list_prim_u_8_strictPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(ffi.Int32)
        >
      >('frbgen_privacyidea_authenticator_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'dummy_method_to_enforce_bundling',
      );
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}

typedef DartPostCObjectFnType =
    ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;
typedef DartPostCObjectFnTypeFunction =
    ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction =
    bool Function(DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPort = ffi.Int64;
typedef DartDartPort = int;

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_String extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_credential_subject extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> claims_json;
}

final class wire_cst_proof extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> proof_type;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> created;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> verification_method;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> proof_purpose;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> proof_value;
}

final class wire_cst_credential_status extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> status_type;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> status_list_credential;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> status_list_index;
}

final class wire_cst_verifiable_credential extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_String> types;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuer;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuer_name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuance_date;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> expiration_date;

  external wire_cst_credential_subject subject;

  external ffi.Pointer<wire_cst_proof> proof;

  external ffi.Pointer<wire_cst_credential_status> status;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> raw_json;
}

final class wire_cst_Credential_VerifiableCredential extends ffi.Struct {
  external ffi.Pointer<wire_cst_verifiable_credential> field0;
}

final class wire_cst_trust_info extends ffi.Struct {
  @ffi.Bool()
  external bool is_valid;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> trust_anchor;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> status_message;

  external ffi.Pointer<wire_cst_list_String> certificate_chain;
}

final class wire_cst_m_doc_credential extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> doc_type;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuing_authority;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuing_country;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> expiry_date;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> namespaces_json;

  external ffi.Pointer<wire_cst_trust_info> trust_info;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> portrait;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> signature;
}

final class wire_cst_Credential_MDoc extends ffi.Struct {
  external ffi.Pointer<wire_cst_m_doc_credential> field0;
}

final class wire_cst_sd_jwt_credential extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_String> types;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuer;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuance_date;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> expiration_date;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> disclosed_claims_json;

  external ffi.Pointer<wire_cst_list_String> disclosable_claims;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> key_binding;
}

final class wire_cst_Credential_SdJwt extends ffi.Struct {
  external ffi.Pointer<wire_cst_sd_jwt_credential> field0;
}

final class CredentialKind extends ffi.Union {
  external wire_cst_Credential_VerifiableCredential VerifiableCredential;

  external wire_cst_Credential_MDoc MDoc;

  external wire_cst_Credential_SdJwt SdJwt;
}

final class wire_cst_credential extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external CredentialKind kind;
}

final class wire_cst_list_credential extends ffi.Struct {
  external ffi.Pointer<wire_cst_credential> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_prim_u_8_loose extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_credential_group extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuer;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> issuer_name;

  external ffi.Pointer<wire_cst_list_credential> credentials;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> logo_url;
}

final class wire_cst_list_credential_group extends ffi.Struct {
  external ffi.Pointer<wire_cst_credential_group> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_selectable_credential extends ffi.Struct {
  external wire_cst_credential credential;

  @ffi.Bool()
  external bool is_selected;

  external ffi.Pointer<wire_cst_list_String> selected_claims;

  @ffi.Int32()
  external int privacy_level;
}
